--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "chalk": "^5.3.0",
     "ejs": "^3.1.9",
     "express": "^4.18.3",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.4.0",
     "mongoose": "^8.2.1",
     "nodemon": "^3.1.0",
